# 930_agent_sci

./: .gitignore  API_Documentation.md  PROJECT_STRUCTURE.md  README.md  demo_intent_detection.py  env.example  main.py  pyproject.toml  requirements.txt  run.py  start.sh
app/: main.py
app/api/v1/: __init__.py  api.py
app/api/v1/endpoints/: auto_fill_params.py  cline_prompt.py  data_check.py  error_checked.py  fill_plan_meta_bycode.py  intent.py  multi_chat.py  plan_check.py  planning_generate.py  query_gpaph_api.py  recommend_data.py  recommend_images.py
app/core/: 1.txt  config.py  logging.py
app/middleware/: logging_middleware.py
app/models/: intent_model.py
app/schemas/: auto_fill_schema.py  intent.py
app/services/: intent_service.py
app/utils/: call_dify.py  example.py  get_params.py  get_params_v2.py  get_params_v3.py  main_test.py  plan_check.py  query_graph.py  replace_tools.py  run_workflow.py  search_tools_by_id.py  text_processor.py  validators.py
