[project]
name = "0730-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.14",
    "fastapi>=0.116.1",
    "loguru>=0.7.3",
    "neo4j>=6.0.2",
    "networkx>=3.5",
    "pandas>=2.3.3",
    "pydantic-settings>=2.10.1",
    "requests>=2.32.4",
    "uvicorn>=0.35.0",
]
